k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: badabin
spec:
  replicas: 2
  template:
    metadata:
      name: backend
      labels:
        app: badabin
        role: backend
        env: production
    spec:
      containers:
      - name: badabin
        image: docker.io/rflpazini/badabin
        imagePullPolicy: Always
        ports:
        - name: badabin
          containerPort: 8080
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /actuator/health
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /actuator/health
            port: 8080
          periodSeconds: 60
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
