k8s/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: badabin-mongo
spec:
  selector:
    app: badabin-mongo
    role: backend
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: badabin-mongo
spec:
  serviceName: "badabin-mongo"
  replicas: 1
  template:
    metadata:
      name: backend
      labels:
        app: badabin-mongo
        role: backend
        env: production
    spec:
      containers:
      - name: mongo
        image: mongo
        command:
        - "mongod"
        - "--port"
        - "27017"
        - "--bind_ip"
        - "0.0.0.0"
        - "--dbpath"
        - "/data/db"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
      terminationGracePeriodSeconds: 10
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
      annotations:
        volume.beta.kubernetes.io/storage-class: "fast"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
